fix: UrlChecksRepository sql request change from distinct to subquery